kubernetes/backend-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: englishtest24-backend
        image: englishtest24-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30001
