kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
  - host: apis.englishtest24h.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: backend-service
            port: 
              number: 80
